# macro-keypad-mac-driver

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  hammerspoon_macropad.lua  identify_keys.py  index.html  install_hammerspoon.sh  install_profile.sh  karabiner_generator.js  karabiner_profile.json  probe_serial.py  server.py  test.html  test_macropad.py  watch_and_install.sh
backups/: karabiner.json.20260530-005309.bak  karabiner.json.20260530-025627.bak  karabiner.json.20260530-043321.bak  karabiner.json.20260530-043505.bak  karabiner.json.20260530-043918.bak  karabiner.json.20260530-044842.bak  karabiner.json.20260530-045202.bak  karabiner.json.20260530-045415.bak  karabiner.json.20260530-045936.bak  karabiner.json.20260530-050236.bak  karabiner.json.20260531-135120.bak  karabiner.json.20260531-135357.bak  karabiner.json.20260531-135449.bak  karabiner.json.20260531-135919.bak
backups/20260530-004331/: index.html  install_profile.sh  karabiner.json  karabiner_profile.json
docs/adr/: ADR-001-native-mac-app.md
docs/superpowers/plans/: 2026-06-03-joystick-dpad.md  2026-06-03-macropad-tauri-app.md
docs/superpowers/specs/: 2026-06-03-joystick-dpad-design.md
src/: configurator.html  index.html  tauri-bridge.js  tester.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  hid_monitor.rs  karabiner.rs  lib.rs  main.rs  profile_store.rs  tray.rs
tasks/: 3d-view-feature.md  todo.md
