[package]
name = "macropad"
version = "1.1.0"
description = "Native macOS configurator for INSTANT K809 macro keypad"
authors = ["ycs"]
license = "MIT"
repository = "https://github.com/ycs-mb/macro-keypad-mac-driver"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "macropad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
dirs = "5"
log = "0.4"
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"
